--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -11,7 +15,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "plugins": [
       {
@@ -20,20 +24,48 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "@/app*": ["./app/*"],
-      "@/assets/*": ["./assets/*"],
-      "@/locales/*": ["./locales/*"],
-      "@/contexts/*": ["./contexts/*"],
-      "@/types/*": ["./types/*"],
-      "@/styles/*": ["./styles/*"],
-      "@/lib/*": ["./lib/*"],
-      "@/components/*": ["./components/*"],
-      "@/Forms/*": ["./components/Forms/*"],
-      "@/ui/*": ["./components/ui/*"],
-      "@/utils/*": ["./utils/*"],
-      "@/hooks/*": ["./hooks/*"],
-      "@/amplify/*": ["./amplify/*"]
+      "@/*": [
+        "./*"
+      ],
+      "@/app*": [
+        "./app/*"
+      ],
+      "@/assets/*": [
+        "./assets/*"
+      ],
+      "@/locales/*": [
+        "./locales/*"
+      ],
+      "@/contexts/*": [
+        "./contexts/*"
+      ],
+      "@/types/*": [
+        "./types/*"
+      ],
+      "@/styles/*": [
+        "./styles/*"
+      ],
+      "@/lib/*": [
+        "./lib/*"
+      ],
+      "@/components/*": [
+        "./components/*"
+      ],
+      "@/Forms/*": [
+        "./components/Forms/*"
+      ],
+      "@/ui/*": [
+        "./components/ui/*"
+      ],
+      "@/utils/*": [
+        "./utils/*"
+      ],
+      "@/hooks/*": [
+        "./hooks/*"
+      ],
+      "@/amplify/*": [
+        "./amplify/*"
+      ]
     }
   },
   "include": [
@@ -42,7 +74,11 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "lib/placeholder-data.ts",
-    "scripts/seed.js"
+    "scripts/seed.js",
+    ".next/dev/types/**/*.ts"
   ],
-  "exclude": ["node_modules", "scripts/**/*"]
+  "exclude": [
+    "node_modules",
+    "scripts/**/*"
+  ]
 }
