--- a/amplify.yml
+++ b/amplify.yml
@@ -11,8 +11,11 @@ applications:
         build:
           commands:
             - pnpm run build
+            # Copy static files required for standalone mode
+            - cp -r .next/static .next/standalone/.next/static
+            - cp -r public .next/standalone/public 2>/dev/null || true
       artifacts:
-        baseDirectory: .next
+        baseDirectory: .next/standalone
         files:
           - "**/*"
       cache:
