fix: copy required-server-files.json for Amplify SSR compatibility

--- a/amplify.yml
+++ b/amplify.yml
@@ -11,8 +11,9 @@ applications:
         build:
           commands:
             - pnpm run build
-            # Copy static files required for standalone mode
+            # Copy files required for Amplify SSR with standalone mode
             - cp -r .next/static .next/standalone/.next/static
+            - cp .next/required-server-files.json .next/standalone/.next/required-server-files.json
             - cp -r public .next/standalone/public 2>/dev/null || true
       artifacts:
         baseDirectory: .next/standalone
