fix: use pnpm prune --prod instead of destructive .pnpm cleanup

--- a/amplify.yml
+++ b/amplify.yml
@@ -16,10 +16,10 @@ applications:
             - rm -rf .next/server/pages/api # Remove API routes from static pages if they are causing bloat (optional, checking first)
             - rm -rf .next/trace .next/trace-build
             # Remove heavy build tools from node_modules before any potential inferred bundling
+            # Safe cleanup of dependencies (removes devDeps like aws-cdk, esbuild, typescript)
+            - pnpm prune --prod
+            # Remove heavy runtime dependencies provided by Lambda (save ~60MB)
             - rm -rf node_modules/@aws-sdk
-            - rm -rf node_modules/aws-cdk-lib node_modules/aws-cdk node_modules/@aws-cdk
-            - rm -rf node_modules/typescript node_modules/esbuild node_modules/@esbuild
-            - rm -rf node_modules/.pnpm node_modules/.modules.yaml node_modules/.pnpm-workspace-state-v1.json
             # Aggressive cleanup of node_modules to ensure only runtime deps remain (if bundled)
             - find node_modules -name "*.d.ts" -delete
             - find node_modules -name "*.map" -delete
